frontend/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
    chart: frontend-0.1.0
    heritage: Helm
    release: frontend
  name: frontend
spec:
  replicas: 3
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: frontend
      release: frontend
  template:
    metadata:
      labels:
        app: frontend
        release: frontend
    spec:
      containers:
      - image: gcr.io/heptio-images/ks-guestbook-demo:0.1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /
            port: http
        name: frontend
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /
            port: http
        resources: {}
